workshop-files/exercises/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pal-tracker
  labels:
    app: pal-tracker
spec:
  type: ClusterIP
  selector:
    app: pal-tracker
    name: pal-tracker-pod
  ports:
    - port: 8080
