workshop-files/exercises/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pal-tracker
  labels:
    app: pal-tracker
spec:
  rules:
  - host: pal-tracker.INGRESS_HOST
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pal-tracker
            port:
              number: 8080
